--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>불꽃놀이</title>
 		<link rel="stylesheet" href="/src/style/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<section id="home">
 			<form id="input_form">
-				<label for="user_input" id="notice">
+				<label id="notice" for="user_input">
 					원하는 글자를 입력한 후 완료 버튼 또는 엔터를 눌러주세요!<br />
 					<span>(1글자부터 10글자까지 입력 가능합니다.)</span>
 				</label>
-				<div>
+				<div id="input_box">
 					<input
 						id="user_input"
 						name="user_input"
