refactor: 애니메이션 조정
-. 홈화면 안내문구 수정
-. 원형효과 기본 스피드 수정
-. 잔상 효과 덮어쓰기 알파값 조정
-. 꼬리 default color 삭제
-. 중력값 변경
-. 원형효과 반지름 배열 수정
-. 꼬리 생성 비율 수정

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section id="home">
 			<form id="input_form">
 				<label id="notice" for="user_input">
-					원하는 글자를 입력한 후 완료 버튼 또는 엔터를 눌러주세요!<br />
+					글자를 입력한 후 완료 버튼 또는 엔터를 눌러주세요!<br />
 					<span>(1글자부터 10글자까지 입력 가능합니다.)</span>
 				</label>
 				<div id="input_box">
