feat: 메신저에서 사이트 링크 클릭 시  인앱 브라우저에서 외부 브라우저로 전환

--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
 		</section>
 
 		<script type="module" src="/src/index.js"></script>
+
+		<script type="module" src="/src/js/inappBrowser.js"></script>
 	</body>
 </html>
