--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -14,6 +14,7 @@
 			<form id="input_form">
 				<label id="notice" for="user_input">
 					글자를 입력한 후 완료 버튼 또는 엔터를 눌러주세요!<br />
+					당신이 입력한 글자로 불꽃놀이가 시작됩니다.<br />
 					<span>(1글자부터 10글자까지 입력 가능합니다.)</span>
 				</label>
 				<div id="input_box">
